[package]
name    = "mongodb-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow             = "1.0.99"
chrono             = "0.4.41"
clap               = { version = "4.5.45", features = ["derive"] }
csv                = "1.3.1"
dotenv             = "0.15.0"
futures            = "0.3.31"
rand               = "0.9.2"
serde              = "1.0.219"
tokio              = { version = "1.47.1", features = ["full"] }
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.mongodb]
version = "3.2.5"
